# mesonsbom

./: .gitignore  AGENTS.md  LICENSE  README.md  meson.build  mise.toml
.github/workflows/: ci.yml  release.yml
openspec/changes/archive/2026-05-02-add-dependencies-to-sbom/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-05-02-add-readme-md/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-05-02-list-transitive-dependencies/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-05-02-meson-sbom-generator/: design.md  proposal.md  tasks.md
openspec/specs/catch2-test-protocol/: spec.md
openspec/specs/ci-pipeline/: spec.md
openspec/specs/dependency-extraction/: spec.md
openspec/specs/os-package-resolution/: spec.md
openspec/specs/readme-creation/: spec.md
openspec/specs/release-pipeline/: spec.md
openspec/specs/sbom-generation/: spec.md
openspec/specs/system-dependency-resolution/: spec.md
openspec/specs/tool-metadata/: spec.md
openspec/specs/transitive-dependency-resolution/: spec.md
scripts/: diagnose_sbom.sh  test_os_resolution.sh  trace_os_origin.sh
src/: main.cpp  os_package_resolver.cpp  os_package_resolver.h  os_release.cpp  os_release.h  pkg_config_wrapper.cpp  pkg_config_wrapper.h  sbom_builder.h
tests/: integration_test.cpp  main.cpp  test_circular_dependencies.cpp  test_dep_bridge.cpp  test_json.cpp  test_os_package_resolver.cpp  test_os_release.cpp  test_pkgconf_integration.cpp  test_timestamp.cpp  test_transitive_dependencies.cpp  test_uuid_generation.cpp
(+61 files in other folders)
